Fix nav bar wrap

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -62,7 +62,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -73,7 +73,7 @@
 
     a {
       display: block;
-      margin: 0 1rem;
+      margin: 0 0.5rem;
       padding: 0.5rem 0;
       color: $masthead-link-color;
       text-decoration: none;
